= 1.0.27 =
* Category settings loads only 10 categories on CPT change - FIXED
* Hook added to filter class & attributes for Elementor widget output - ADDED

= 1.0.26 =
* Error on setting array option value in block editor - FIXED

= 1.0.25 =
* PHP Warning if default field value not set - FIXED

= 1.0.24 =
* WP 5.7 Gutenberg widgets screen has JS error which breaks page saving - FIXED
* WP 5.7 Gutenberg widgets screen legacy widgets have no `show advanced` button - FIXED

= 1.0.23 =
* Rows argument now available to group arguments to the one row - ADDED

= 1.0.22 =
* Sometimes arguments are not set early enough when building block JS - FIXED

= 1.0.21 =
* Block Category can now update on post_type change - FIXED
* Non static method 'argument_values' should not be called statically - FIXED

= 1.0.20 =
* On change content don't compare the actual content, only attributes - CHANGED
* Call AUI init JS function if defined on each block edit - ADDED
* is_preview() now included block preview - CHANGED
* Empty block previews can show broken class input - FIXED
* color input for block now uses colorPicker - CHANGED

= 1.0.19 =
* Put non grouped block settings in to a "settings" group - CHANGED

= 1.0.18 =
* Conflicts with fusion builder elements - FIXED
* Oxygen builder preview detection - ADDED
* Elementor editor widget section types have no styling - FIXED

= 1.0.17 =
* Title & description in block editor shows escaped special characters - FIXED
* Widget advanced settings button line-height too tall - FIXED

= 1.0.16 =
* wp.editor is deprecated, updated to wp.blockEditor - CHANGED
* textarea field type now supported - ADDED
* `html` special field name added that will allow HTML by making it an enclosing shortcode - ADDED
* `no_wrap` special field name added that will prevent the wrapping div being added - ADDED



// old style change log
@since 1.0.3 is_block_content_call() method added.